--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <a-scene embedded arjs>
                 <!-- create your content here. just a box for now -->
                 <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+                <a-assets>
+                    <a-asset-item id="tree" src="https://sketchfab.com/models/4615cfc76d724958bd5631a8448f4231/embed"></a-asset-item>
+                  </a-assets>
+                  <!-- use your gltf model -->
+                  <a-entity gltf-model="##tree"></a-entity>
                 <!-- define a camera which will move according to the marker position -->
                 <a-marker-camera preset='hiro'></a-marker-camera>
               </a-scene>
