sketchfab sin cubo

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body style='margin : 10px; overflow: auto;'>
         <a-scene embedded arjs>
-                <!-- create your content here. just a box for now -->
-                <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+                <!-- create your content here. just a box for now 
+                <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
                 <a-assets>
                     <a-asset-item id="tree" src="https://sketchfab.com/models/4615cfc76d724958bd5631a8448f4231/embed"></a-asset-item>
                   </a-assets>
