sketchfab sin cubo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a-assets>
                         <a-asset-item id="mario" src="https://cdn.rawgit.com/FlixAcosta/FlixAcosta.github.io/master/scene.gltf"></a-asset-item>
                 </a-assets>
-                <a-gltf-model src="##mario" ></a-gltf-model>
+                <a-gltf-model src="#mario" ></a-gltf-model>
                 <!--<a-text value="Hello, World!"></a-text>-->
                 <a-marker-camera preset='hiro'></a-marker-camera>
               </a-scene>
