--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <a-scene embedded arjs>
                 <!--<a-text value="Hello, World!"></a-text>-->
                 <a-text value="Hello, World!"></a-text>
-                <a-marker-camera type='pattern' patternUrl='/pattern_marker.patt'></a-marker-camera>
+                <a-marker-camera type='pattern' patternUrl='/pattern_marker'></a-marker-camera>
                 
              </a-scene>         
     
