--- a/mobile-performance.html
+++ b/mobile-performance.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE>
+<html>
 <!-- include aframe -->
 <script src="AR/AR/aframe/examples/vendor/aframe/build/aframe.js"></script>
 <!-- include aframe-ar.js -->
@@ -10,7 +11,7 @@
 	<a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - mobile performance in a-frame
 	<br/>
 	Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
-</div>
+    </div>
 	<!-- enable artoolkit on this scene -->
 	<a-scene stats embedded arjs='sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180'>
 
