--- a/mobile-performance.html
+++ b/mobile-performance.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE hmtl>
 <html>
 <!-- include aframe -->
 <script src="AR/AR/aframe/examples/vendor/aframe/build/aframe.js"></script>
@@ -7,12 +7,7 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 	
-	<div style='position: fixed; top: 10px; width:100%; text-align: center; z-index: 1;'>
-	<a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - mobile performance in a-frame
-	<br/>
-	Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
-    </div>
-	<!-- enable artoolkit on this scene -->
+	
 	<a-scene stats embedded arjs='sourceType: webcam; detectionMode: mono; maxDetectionRate: 30; canvasWidth: 240; canvasHeight: 180'>
 
 		<!-- define the object which gonna be put on this marker  -->
