--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style='margin : 10px; overflow: auto;'>
      <a-scene embedded arjs>
          
-         <a-marker preset='hiro'>
+         <a-marker preset='custom' url="nissan.patt">
             <a-video src="infinity.mp4" width="4" height="2" position="0 0.5 0"
                              autoplay loop="true" rotation="-90 0 0"></a-video>
          </a-marker>
