--- a/videochat.html
+++ b/videochat.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     
-    <iframe
+    <!--<iframe
     src="https://tokbox.com/embed/embed/ot-embed.js?embedId=8711e1e9-aa7d-4c5c-9c41-a66c734de2ad&room=DEFAULT_ROOM&iframe=true"
     width="800px"
     height="640px"
     allow="microphone; camera"
-  ></iframe>
+  ></iframe> -->
+
+  <iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=8711e1e9-aa7d-4c5c-9c41-a66c734de2ad&room=DEFAULT_ROOM&iframe=true"
+   width=200 
+   height=300 
+   allow="microphone; camera" >
+</iframe>
 
 </body>
 </html>
