--- a/videochat.html
+++ b/videochat.html
@@ -18,8 +18,9 @@
   <iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=8711e1e9-aa7d-4c5c-9c41-a66c734de2ad&room=DEFAULT_ROOM&iframe=true"
    width=300 
    height=400 
-   allow="microphone; camera" >
-</iframe>
+   allow="microphone; camera" 
+   allowfullscreen>
+  </iframe>
 
 </body>
 </html>
