--- a/videochat.html
+++ b/videochat.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div
+    position: absolute;
+    height: 200px;
+    width: 400px;
+    margin: -100px 0 0 -200px;
+    top: 50%;
+    left: 50%;>
             <iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=8711e1e9-aa7d-4c5c-9c41-a66c734de2ad&room=DEFAULT_ROOM&iframe=true"
    width=300 
    height=400 
