--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <body style='margin : 10px; overflow: auto;'>
      <a-scene embedded arjs>
          
-         <a-marker preset='custom' url="nissan.patt">
+         <a-marker-camera preset='custom' preset='hiro'>
            <a-video src="infinity.mp4" width="4" height="2" position="0 0.5 0"
                              autoplay loop="true" rotation="-90 0 0"></a-video> 
             <a-torus-knot radius='0.26' radius-tubular='0.05'>
-         </a-marker>
+         </a-marker-camera>
 
          <!-- <a-box position='0 0.5 0' material='opacity: 0.5; side: double'>
 			<a-torus-knot radius='0.26' radius-tubular='0.05'>
