--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body style='margin : 10px; overflow: auto;'>
      <a-scene embedded arjs>
          
-         <a-marker-camera preset='custom' preset='hiro'>
+         <a-marker-camera preset='hiro'>
            <a-video src="infinity.mp4" width="4" height="2" position="0 0.5 0"
                              autoplay loop="true" rotation="-90 0 0"></a-video> 
             <a-torus-knot radius='0.26' radius-tubular='0.05'>
