--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=2">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="AR/AR/aframe/examples/vendor/aframe/build/aframe.js"></script>
+    <script src="<script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>"></script>
     <!-- 
         <script 
 
